@@ -1,39 +1,49 @@
 package top.sharehome.springbootinittemplate.utils.document.pdf;
 
+import io.netty.buffer.ByteBuf;
+import io.netty.buffer.Unpooled;
+import javax.servlet.ServletOutputStream;
+import javax.servlet.http.HttpServletResponse;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Accessors;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.compress.archivers.zip.ZipArchiveEntry;
+import org.apache.commons.compress.archivers.zip.ZipArchiveOutputStream;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.dromara.pdf.fop.core.doc.Document;
+import org.dromara.pdf.fop.core.doc.component.barcode.Barcode;
 import org.dromara.pdf.fop.core.doc.component.image.Image;
 import org.dromara.pdf.fop.core.doc.component.line.SplitLine;
 import org.dromara.pdf.fop.core.doc.component.table.*;
 import org.dromara.pdf.fop.core.doc.component.text.Text;
 import org.dromara.pdf.fop.core.doc.page.Page;
 import org.dromara.pdf.fop.handler.TemplateHandler;
+import org.dromara.pdf.pdfbox.core.ext.analyzer.DocumentAnalyzer;
+import org.dromara.pdf.pdfbox.core.info.ImageInfo;
+import org.dromara.pdf.pdfbox.core.info.TextInfo;
+import org.dromara.pdf.pdfbox.handler.PdfHandler;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.web.multipart.MultipartFile;
 import top.sharehome.springbootinittemplate.common.base.ReturnCode;
 import top.sharehome.springbootinittemplate.exception.customize.CustomizeDocumentException;
-import top.sharehome.springbootinittemplate.exception.customize.CustomizeReturnException;
 import top.sharehome.springbootinittemplate.utils.document.pdf.enums.*;
 
-import javax.servlet.ServletOutputStream;
-import javax.servlet.http.HttpServletResponse;
+import javax.imageio.ImageIO;
 import java.awt.*;
 import java.io.*;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
 import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
+import java.util.zip.ZipEntry;
 
 /**
  * PDF工具类
@@ -74,7 +84,7 @@ public class PdfUtils {
             }
             POF_CONF_PATH = existConf.getPath();
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "初始化配置文件失败");
         }
     }
 
@@ -105,6 +115,9 @@ public class PdfUtils {
          */
         private int pageIndex;
 
+        /**
+         * 写入PDF数据内部类构造器
+         */
         public Writer() {
             this.document = TemplateHandler.Document.build().setConfigPath(POF_CONF_PATH);
             this.pageList = new ArrayList<>();
@@ -126,12 +139,11 @@ public class PdfUtils {
          */
         public Writer addPage(PdfPage pdfPage) {
             if (Objects.isNull(pdfPage)) {
-                log.error("处理PDF文件出错，pdfPage参数为空");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "pdfPage参数为空");
             }
             // 创建新页面
             Page page = TemplateHandler.Page.build()
-                    // 设置页面字体大小，默认为12
+                    // 设置页面字号，默认为12
                     .setFontSize(String.valueOf(Objects.isNull(pdfPage.getFontSize()) || pdfPage.getFontSize() <= 0 ? 12 : pdfPage.getFontSize()))
                     // 设置页面默认四周边距，默认为25
                     .setMargin(String.valueOf(Objects.isNull(pdfPage.getMargin()) || pdfPage.getMargin() <= 0 ? 25 : pdfPage.getMargin()))
@@ -157,7 +169,7 @@ public class PdfUtils {
          * 添加段落
          *
          * @param textarea 文本内容
-         * @param fontSize 字体大小
+         * @param fontSize 字号
          */
         public Writer addParagraph(String textarea, Integer fontSize) {
             return addParagraph(textarea, fontSize, null, null, null);
@@ -167,7 +179,7 @@ public class PdfUtils {
          * 添加段落
          *
          * @param textarea  文本内容
-         * @param fontSize  字体大小
+         * @param fontSize  字号
          * @param fontColor 字体颜色
          */
         public Writer addParagraph(String textarea, Integer fontSize, Color fontColor) {
@@ -178,7 +190,7 @@ public class PdfUtils {
          * 添加段落
          *
          * @param textarea   文本内容
-         * @param fontSize   字体大小
+         * @param fontSize   字号
          * @param fontColor  字体颜色
          * @param fontWeight 字体字重
          * @param fontStyle  字体样式
@@ -205,7 +217,6 @@ public class PdfUtils {
                 addPage();
             }
             if (Objects.isNull(pdfParagraph)) {
-                log.error("处理PDF文件出错，PdfParagraph参数为空");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "PdfParagraph参数为空");
             }
             Text text = TemplateHandler.Text.build()
@@ -336,7 +347,6 @@ public class PdfUtils {
          */
         public Writer addTable(List<PdfTable.PdfTableRow> pdfTableRows, boolean existHeader, boolean existFooter, String fontFamily) {
             if (CollectionUtils.isEmpty(pdfTableRows)) {
-                log.error("处理PDF文件出错，List<PdfTable.PdfTableRow>参数为空");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "List<PdfTable.PdfTableRow>参数为空");
             }
             // 校准每行填充长度
@@ -461,7 +471,6 @@ public class PdfUtils {
                 addPage();
             }
             if (Objects.isNull(pdfTable)) {
-                log.error("处理PDF文件出错，PdfTable参数为空");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "PdfTable参数为空");
             }
             // 设置填充表格的标志符号
@@ -504,7 +513,7 @@ public class PdfUtils {
                     // 设置表格体表行最小高度为15
                     tableRow.setMinRowHeight("15");
                     return tableRow;
-                }).toList();
+                }).collect(Collectors.toList());
                 tableBody.addRow(tableBodyRows);
                 isAddTable += 1;
             }
@@ -539,7 +548,7 @@ public class PdfUtils {
                     // 设置表格体表行最小高度为15
                     tableRow.setMinRowHeight("15");
                     return tableRow;
-                }).toList();
+                }).collect(Collectors.toList());
                 tableHeader.addRow(tableHeaderRows);
                 isAddTable += 2;
             }
@@ -572,7 +581,7 @@ public class PdfUtils {
                     // 设置表格体表行最小高度为15
                     tableRow.setMinRowHeight("15");
                     return tableRow;
-                }).toList();
+                }).collect(Collectors.toList());
                 tableFooter.addRow(tableFooterRows);
                 isAddTable += 4;
             }
@@ -654,7 +663,6 @@ public class PdfUtils {
                 addPage();
             }
             if (Objects.isNull(pdfSplitLine)) {
-                log.error("处理PDF文件出错，PdfSplitLine参数为空");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "PdfSplitLine参数为空");
             }
             SplitLine splitLine = TemplateHandler.SplitLine.build()
@@ -684,7 +692,6 @@ public class PdfUtils {
                 ImageExtension imageExtension = ImageExtension.getEnumByName("." + extension);
                 return addImage(inputStream, imageExtension);
             } catch (IOException e) {
-                log.error("处理PDF文件出错，获取图像数据流失败");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "获取图像数据流失败");
             }
         }
@@ -693,7 +700,7 @@ public class PdfUtils {
          * 添加图像
          *
          * @param inputStream    图像数据流
-         * @param imageExtension 图像拓展名
+         * @param imageExtension 图像扩展名
          */
         public Writer addImage(InputStream inputStream, ImageExtension imageExtension) {
             String imageTempPath = copyImageToTempDir(inputStream, imageExtension);
@@ -721,7 +728,6 @@ public class PdfUtils {
                 ImageExtension imageExtension = ImageExtension.getEnumByName("." + extension);
                 return addImage(inputStream, imageExtension, imageHorizontal);
             } catch (IOException e) {
-                log.error("处理PDF文件出错，获取图像数据流失败");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "获取图像数据流失败");
             }
         }
@@ -730,7 +736,7 @@ public class PdfUtils {
          * 添加图像
          *
          * @param inputStream     图像数据流
-         * @param imageExtension  图像拓展名
+         * @param imageExtension  图像扩展名
          * @param imageHorizontal 图像对齐方式
          */
         public Writer addImage(InputStream inputStream, ImageExtension imageExtension, ImageHorizontal imageHorizontal) {
@@ -762,7 +768,6 @@ public class PdfUtils {
                 ImageExtension imageExtension = ImageExtension.getEnumByName("." + extension);
                 return addImage(inputStream, imageExtension, imageHorizontal, width, height);
             } catch (IOException e) {
-                log.error("处理PDF文件出错，获取图像数据流失败");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "获取图像数据流失败");
             }
         }
@@ -771,7 +776,7 @@ public class PdfUtils {
          * 添加图像
          *
          * @param inputStream     图像数据流
-         * @param imageExtension  图像拓展名
+         * @param imageExtension  图像扩展名
          * @param imageHorizontal 图像对齐方式
          * @param width           图像宽度
          * @param height          图像高度
@@ -810,12 +815,10 @@ public class PdfUtils {
                 addPage();
             }
             if (Objects.isNull(pdfImage)) {
-                log.error("处理PDF文件出错，PdfImage参数为空");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "PdfImage参数为空");
             }
             if (!Files.isRegularFile(Path.of(pdfImage.getPath()))) {
-                log.error("处理PDF文件出错，PdfImage参数中图片所在路径[path]为不存在或者非文件");
-                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "PdfImage参数中图片所在路径为不存在或者非文件");
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "PdfImage参数中图像所在路径[path]为不存在或者非文件");
             }
             Image image = TemplateHandler.Image.build()
                     // 设置图像所在路径
@@ -834,6 +837,33 @@ public class PdfUtils {
         }
 
         /**
+         * todo 添加条码
+         *
+         * @param pdfBarcode PDF条码构造类
+         */
+        public Writer addBarcode(PdfBarcode pdfBarcode) {
+            // 如果页面列表中无数据，则自动添加一页，以防开发者因忘记创建页面而出现异常
+            if (pageList.isEmpty()) {
+                addPage();
+            }
+            if (Objects.isNull(pdfBarcode)) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "PdfBarcode参数为空");
+            }
+            Barcode barcode = TemplateHandler.Barcode.build()
+                    .setType(BarcodeType.QR_CODE.getName())
+                    .setScaleRate("1")
+                    .setHeight("150px")
+                    .setWidth("150px")
+                    .setContent("https://github.com/AntonyCheng")
+                    .setWords("https://github.com/AntonyCheng")
+                    .setHorizontalStyle(BarcodeHorizontal.CENTER.getName())
+                    .setMarginTop("1")
+                    .setMarginBottom("1");
+            pageList.get(pageIndex).addBodyComponent(barcode);
+            return this;
+        }
+
+        /**
          * 将Word写入响应流
          *
          * @param fileName 响应文件名
@@ -845,12 +875,12 @@ public class PdfUtils {
                 ServletOutputStream outputStream = response.getOutputStream();
                 doWrite(outputStream);
             } catch (IOException e) {
-                throw new CustomizeReturnException(ReturnCode.PDF_FILE_ERROR);
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "获取响应输出流异常");
             }
         }
 
         /**
-         * 保存并输出PDF
+         * 将PDF写入输出流
          *
          * @param outputStream 输出流
          */
@@ -865,7 +895,7 @@ public class PdfUtils {
          * @param fileName 文件名
          * @param response 响应
          */
-        private static void handlePdfResponse(String fileName, HttpServletResponse response) throws UnsupportedEncodingException {
+        private void handlePdfResponse(String fileName, HttpServletResponse response) throws UnsupportedEncodingException {
             String realName = null;
             if (StringUtils.isBlank(fileName)) {
                 realName = UUID.randomUUID().toString().replace("-", "") + ".docx";
@@ -885,7 +915,7 @@ public class PdfUtils {
         /**
          * 将Color转换成16进制数
          */
-        private static String colorToHex(Color color) {
+        private String colorToHex(Color color) {
             if (Objects.isNull(color)) {
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "Color转换为16进制数时，Color对象不能为空");
             }
@@ -893,20 +923,20 @@ public class PdfUtils {
         }
 
         /**
-         * 设置PDF插入图片存放在系统临时文件夹中的子路径
+         * 设置PDF插入图像存放在系统临时文件夹中的子路径
          */
-        private static final String TEMP_IMAGE_DIR = FileUtils.getTempDirectoryPath() + "templates" + File.separator + "pdf" + File.separator + "tempImage" + File.separator;
+        private final String TEMP_IMAGE_DIR = FileUtils.getTempDirectoryPath() + "templates" + File.separator + "pdf" + File.separator + "tempImage" + File.separator;
 
         /**
          * 将图像拷贝至临时文件夹中
          *
          * @param inputStream    图像数据流
-         * @param imageExtension 图像拓展名
+         * @param imageExtension 图像扩展名
          */
-        private static String copyImageToTempDir(InputStream inputStream, ImageExtension imageExtension) {
+        private String copyImageToTempDir(InputStream inputStream, ImageExtension imageExtension) {
             try {
                 if (Objects.isNull(imageExtension)) {
-                    throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "图像拓展名为空");
+                    throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "图像扩展名为空");
                 }
                 String imageTempPath = TEMP_IMAGE_DIR + "pdfImage_" + UUID.randomUUID().toString().replace("-", "") + imageExtension.getName();
                 Path path = Path.of(imageTempPath);
@@ -914,7 +944,6 @@ public class PdfUtils {
                 FileUtils.copyInputStreamToFile(inputStream, new File(imageTempPath));
                 return imageTempPath;
             } catch (IOException e) {
-                log.error("处理PDF文件出错，图像数据拷贝异常");
                 throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "图像数据拷贝异常");
             }
         }
@@ -925,6 +954,428 @@ public class PdfUtils {
      * 读取PDF数据内部类
      */
     public static class Reader {
+
+        /**
+         * 初始化文档
+         */
+        private final org.dromara.pdf.pdfbox.core.base.Document document;
+
+        /**
+         * 读取PDF数据内部类构造器
+         */
+        public Reader(InputStream inputStream) {
+            this.document = PdfHandler.getDocumentHandler().load(inputStream);
+        }
+
+        /**
+         * 获取PDF文档中的段落数据，并写入响应流
+         *
+         * @param txtFileName TXT文件名
+         * @param response 响应
+         */
+        public void getParagraphsResponse(String txtFileName, HttpServletResponse response) {
+            getParagraphsResponse(null, txtFileName, response);
+        }
+
+        /**
+         * 获取PDF文档中的段落数据，并写入响应流
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         * @param txtFileName TXT文件名
+         * @param response 响应
+         */
+        public void getParagraphsResponse(Integer pageIndex, String txtFileName, HttpServletResponse response) {
+            if (Objects.isNull(response)) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "响应为空");
+            }
+            // 获取响应中的响应流
+            try (ServletOutputStream outputStream = response.getOutputStream()) {
+                // 预处理TXT类型响应
+                handleTxtResponse(txtFileName, response);
+                getParagraphsTxt(pageIndex, outputStream);
+            } catch (IOException e) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "获取响应输出流异常");
+            }
+        }
+
+        /**
+         * 获取PDF文档中的段落数据，并写入输出流
+         *
+         * @param outputStream 输出流
+         */
+        public void getParagraphsTxt(OutputStream outputStream) {
+            getParagraphsTxt(null, outputStream);
+        }
+
+        /**
+         * 获取PDF文档中的段落数据，并写入输出流
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         * @param outputStream 输出流
+         */
+        public void getParagraphsTxt(Integer pageIndex, OutputStream outputStream) {
+            if (Objects.isNull(outputStream)) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "获取段落数据时，输出流不能为空");
+            }
+            List<String> paragraphList = getParagraphsList(pageIndex);
+            // 遍历段落列表，同时将数据传至输出流
+            paragraphList.forEach(paragraph -> {
+                try {
+                    outputStream.write(paragraph.getBytes(StandardCharsets.UTF_8));
+                    outputStream.write('\n');
+                } catch (IOException e) {
+                    throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "获取段落数据时，写入输出流异常");
+                }
+            });
+        }
+
+        /**
+         * 获取PDF文档中的段落数据
+         */
+        public List<String> getParagraphsList() {
+            return getParagraphsList(null);
+        }
+
+        /**
+         * 获取PDF文档中的段落数据
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         */
+        public List<String> getParagraphsList(Integer pageIndex) {
+            try {
+                // 创建结果集
+                List<String> result = new ArrayList<>();
+                if (Objects.isNull(pageIndex)) {
+                    for (int i = 0; i < document.getTotalPageNumber(); i++) {
+                        // 创建PDF文档分析器
+                        DocumentAnalyzer documentAnalyzer = new DocumentAnalyzer(document);
+                        // 获取当前页的段落信息Set
+                        Set<TextInfo> textInfos = documentAnalyzer.analyzeText(i);
+                        // 将段落信息Set排序后，遍历添加至结果集
+                        textInfos.stream().sorted((text1, text2) -> {
+                            try {
+                                double height1 = Double.parseDouble(text1.getTextBeginPosition().split(",")[1]);
+                                double height2 = Double.parseDouble(text2.getTextBeginPosition().split(",")[1]);
+                                return Double.compare(height2, height1);
+                            } catch (NumberFormatException e) {
+                                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "段落位置获取或转换失败");
+                            }
+                        }).forEach(textInfo -> {
+                            String textContent = handleDigitalDecoding(textInfo.getTextContent());
+                            result.add(textContent);
+                        });
+                    }
+                } else {
+                    if (document.getTotalPageNumber() <= pageIndex || pageIndex < 0) {
+                        throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "读取PDF中的段落时，无法解析非法页码数");
+                    }
+                    // 创建PDF文档分析器
+                    DocumentAnalyzer documentAnalyzer = new DocumentAnalyzer(document);
+                    // 获取当前页的段落信息Set
+                    Set<TextInfo> textInfos = documentAnalyzer.analyzeText(pageIndex);
+                    // 将段落信息Set排序后，遍历添加至结果集
+                    textInfos.stream().sorted((text1, text2) -> {
+                        try {
+                            double height1 = Double.parseDouble(text1.getTextBeginPosition().split(",")[1]);
+                            double height2 = Double.parseDouble(text2.getTextBeginPosition().split(",")[1]);
+                            return Double.compare(height2, height1);
+                        } catch (NumberFormatException e) {
+                            throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "段落位置获取或转换失败");
+                        }
+                    }).forEach(textInfo -> {
+                        String textContent = handleDigitalDecoding(textInfo.getTextContent());
+                        result.add(textContent);
+                    });
+                }
+                return result;
+            } finally {
+                // 关闭文档
+                document.close();
+            }
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为响应流
+         *
+         * @param response 响应
+         */
+        public void getImagesResponse(HttpServletResponse response) {
+            getImagesResponse(null, null, response, null);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为响应流
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         * @param response 响应
+         */
+        public void getImagesResponse(Integer pageIndex, HttpServletResponse response) {
+            getImagesResponse(pageIndex, null, response, null);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为响应流
+         *
+         * @param zipFileName 压缩后的文件名
+         * @param response 响应
+         */
+        public void getImagesResponse(String zipFileName, HttpServletResponse response) {
+            getImagesResponse(null, zipFileName, response, null);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为响应流
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         * @param zipFileName 压缩后的文件名
+         * @param response 响应
+         */
+        public void getImagesResponse(Integer pageIndex, String zipFileName, HttpServletResponse response) {
+            getImagesResponse(pageIndex, zipFileName, response, null);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为响应流
+         *
+         * @param zipFileName 压缩后的文件名
+         * @param response 响应
+         * @param zipLevel 压缩等级：-1~9，理论上等级越高，压缩效率越高，耗时越长
+         */
+        public void getImagesResponse(String zipFileName, HttpServletResponse response, Integer zipLevel) {
+            getImagesResponse(null, zipFileName, response, zipLevel);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为响应流
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         * @param zipFileName 压缩后的文件名
+         * @param response 响应
+         * @param zipLevel 压缩等级：-1~9，理论上等级越高，压缩效率越高，耗时越长
+         */
+        public void getImagesResponse(Integer pageIndex, String zipFileName, HttpServletResponse response, Integer zipLevel) {
+            if (Objects.isNull(response)) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "响应为空");
+            }
+            // 获取响应中的响应流
+            try (ServletOutputStream outputStream = response.getOutputStream()) {
+                // 预处理ZIP类型响应
+                handleZipResponse(zipFileName, response);
+                getImagesZip(pageIndex, outputStream, zipLevel);
+            } catch (IOException e) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "获取响应输出流异常");
+            }
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为输出流
+         *
+         * @param outputStream 输出流
+         */
+        public void getImagesZip(OutputStream outputStream) {
+            getImagesZip(null, outputStream, null);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为输出流
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         * @param outputStream 输出流
+         */
+        public void getImagesZip(Integer pageIndex, OutputStream outputStream) {
+            getImagesZip(pageIndex, outputStream, null);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为输出流
+         *
+         * @param outputStream 输出流
+         * @param zipLevel 压缩等级：-1~9，理论上等级越高，压缩效率越高，耗时越长
+         */
+        public void getImagesZip(OutputStream outputStream, Integer zipLevel) {
+            getImagesZip(null, outputStream, zipLevel);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，并且进行压缩，将压缩后的数据转为输出流
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         * @param outputStream 输出流
+         * @param zipLevel 压缩等级：-1~9，理论上等级越高，压缩效率越高，耗时越长
+         */
+        public void getImagesZip(Integer pageIndex, OutputStream outputStream, Integer zipLevel) {
+            if (Objects.isNull(outputStream)) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "读取PDF中的图像时，压缩数据输出流不能为空");
+            }
+            // 构造ZIP文件输出流
+            try (ZipArchiveOutputStream zipArchiveOutputStream = new ZipArchiveOutputStream(outputStream)) {
+                // 获取图像byte数组
+                Map<String, List<byte[]>> imagesByteArray = getImagesByteArray(pageIndex);
+                // 设置压缩等级
+                zipArchiveOutputStream.setLevel(Objects.isNull(zipLevel) || zipLevel < -1 || zipLevel > 9 ? 5 : zipLevel);
+                // 设置压缩方法
+                zipArchiveOutputStream.setMethod(ZipEntry.DEFLATED);
+                // 准备压缩计数和名称
+                int index = 1;
+                String uuid = UUID.randomUUID().toString().replace("-", "");
+                for (Map.Entry<String, List<byte[]>> stringListEntry : imagesByteArray.entrySet()) {
+                    // 根据图像扩展名进行遍历
+                    String extension = stringListEntry.getKey();
+                    List<byte[]> imageArrayList = stringListEntry.getValue();
+                    // 将每张图像byte数组数据传至压缩输出流中
+                    for (byte[] image : imageArrayList) {
+                        String entryName = uuid + "_" + index + "." + extension;
+                        ZipArchiveEntry entry = new ZipArchiveEntry(entryName);
+                        zipArchiveOutputStream.putArchiveEntry(entry);
+                        ByteBuf buf = Unpooled.copiedBuffer(image);
+                        buf.readBytes(zipArchiveOutputStream, buf.readableBytes());
+                        zipArchiveOutputStream.closeArchiveEntry();
+                        index++;
+                    }
+                }
+            } catch (IOException e) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "读取PDF中的图像时，压缩发生异常");
+            }
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，同时按照扩展名分类，并转换为byte[]集合类型
+         */
+        public Map<String, List<byte[]>> getImagesByteArray() {
+            return getImagesByteArray(null);
+        }
+
+        /**
+         * 获取PDF文档中的图像数据，同时按照扩展名分类，并转换为byte[]集合类型
+         *
+         * @param pageIndex PDF页码索引，从0开始
+         */
+        public Map<String, List<byte[]>> getImagesByteArray(Integer pageIndex) {
+            try {
+                // 创建结果集
+                Map<String, List<byte[]>> result = new HashMap<>();
+                if (Objects.isNull(pageIndex)) {
+                    for (int i = 0; i < document.getTotalPageNumber(); i++) {
+                        // 创建PDF文档分析器
+                        DocumentAnalyzer documentAnalyzer = new DocumentAnalyzer(document);
+                        // 获取当前页的图像信息Set
+                        Set<ImageInfo> imageInfos = documentAnalyzer.analyzeImage(i);
+                        // 遍历图像信息
+                        for (ImageInfo imageInfo : imageInfos) {
+                            // 创建临时Byte数组输出流
+                            ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+                            // 获取图像扩展名
+                            String extension = imageInfo.getImageType();
+                            // 将图像信息数据写入输出流中
+                            ImageIO.write(imageInfo.getImage(), extension, byteArrayOutputStream);
+                            // 封装结果集
+                            if (Objects.isNull(result.get(extension))) {
+                                ArrayList<byte[]> value = new ArrayList<>();
+                                value.add(byteArrayOutputStream.toByteArray());
+                                result.put(extension, value);
+                            } else {
+                                result.get(extension).add(byteArrayOutputStream.toByteArray());
+                            }
+                        }
+                    }
+                } else {
+                    if (document.getTotalPageNumber() <= pageIndex || pageIndex < 0) {
+                        throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "读取PDF中的图像时，无法解析非法页码数");
+                    }
+                    // 创建PDF文档分析器
+                    DocumentAnalyzer documentAnalyzer = new DocumentAnalyzer(document);
+                    // 获取当前页的图像信息Set
+                    Set<ImageInfo> imageInfos = documentAnalyzer.analyzeImage(pageIndex);
+                    // 遍历图像信息
+                    for (ImageInfo imageInfo : imageInfos) {
+                        // 创建临时Byte数组输出流
+                        ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+                        // 获取图像扩展名
+                        String extension = imageInfo.getImageType();
+                        // 将图像信息数据写入输出流中
+                        ImageIO.write(imageInfo.getImage(), extension, byteArrayOutputStream);
+                        // 封装结果集
+                        if (Objects.isNull(result.get(extension))) {
+                            ArrayList<byte[]> value = new ArrayList<>();
+                            value.add(byteArrayOutputStream.toByteArray());
+                            result.put(extension, value);
+                        } else {
+                            result.get(extension).add(byteArrayOutputStream.toByteArray());
+                        }
+                    }
+                }
+                return result;
+            } catch (IOException e) {
+                throw new CustomizeDocumentException(ReturnCode.PDF_FILE_ERROR, "读取PDF中的图像时，发生异常");
+            } finally {
+                // 关闭文档
+                document.close();
+            }
+        }
+
+        /**
+         * 段落数字解码
+         *
+         * @param paragraph 段落
+         */
+        private String handleDigitalDecoding(String paragraph) {
+            return paragraph.replace("\uE000", "1")
+                    .replace("\uE001", "2")
+                    .replace("\uE002", "3")
+                    .replace("\uE003", "4")
+                    .replace("\uE004", "5")
+                    .replace("\uE005", "6")
+                    .replace("\uE006", "7")
+                    .replace("\uE007", "8")
+                    .replace("\uE008", "9")
+                    .replace("\uE009", "0");
+        }
+
+        /**
+         * 处理ContentType是Txt格式的响应
+         *
+         * @param fileName 文件名
+         * @param response 响应
+         */
+        private void handleTxtResponse(String fileName, HttpServletResponse response) throws UnsupportedEncodingException {
+            String realName = null;
+            if (StringUtils.isBlank(fileName)) {
+                realName = UUID.randomUUID().toString().replace("-", "") + ".txt";
+            } else {
+                realName = fileName + "_" + UUID.randomUUID().toString().replace("-", "") + ".txt";
+            }
+            String encodeName = URLEncoder
+                    .encode(realName, StandardCharsets.UTF_8)
+                    .replaceAll("\\+", "%20");
+            String contentDispositionValue = "attachment; filename=" + encodeName + ";filename*=utf-8''" + encodeName;
+            response.addHeader("Access-Control-Expose-Headers", "Content-Disposition,download-filename");
+            response.setHeader("Content-disposition", contentDispositionValue);
+            response.setHeader("download-filename", encodeName);
+            response.setContentType("text/plain;charset=UTF-8");
+        }
+
+        /**
+         * 处理ContentType是Zip格式的响应
+         *
+         * @param fileName 文件名
+         * @param response 响应
+         */
+        private void handleZipResponse(String fileName, HttpServletResponse response) throws UnsupportedEncodingException {
+            String realName = null;
+            if (StringUtils.isBlank(fileName)) {
+                realName = UUID.randomUUID().toString().replace("-", "") + ".zip";
+            } else {
+                realName = fileName + "_" + UUID.randomUUID().toString().replace("-", "") + ".zip";
+            }
+            String encodeName = URLEncoder
+                    .encode(realName, StandardCharsets.UTF_8)
+                    .replaceAll("\\+", "%20");
+            String contentDispositionValue = "attachment; filename=" + encodeName + ";filename*=utf-8''" + encodeName;
+            response.addHeader("Access-Control-Expose-Headers", "Content-Disposition,download-filename");
+            response.setHeader("Content-disposition", contentDispositionValue);
+            response.setHeader("download-filename", encodeName);
+            response.setContentType("application/x-zip-compressed;charset=UTF-8");
+        }
 
     }
 
@@ -938,7 +1389,7 @@ public class PdfUtils {
     public static class PdfPage {
 
         /**
-         * 页面字体大小
+         * 页面字号
          */
         Integer fontSize;
 
@@ -974,7 +1425,7 @@ public class PdfUtils {
         private String fontFamily;
 
         /**
-         * 段落字体大小
+         * 段落字号
          */
         private Integer fontSize;
 
@@ -1238,6 +1689,67 @@ public class PdfUtils {
 
         /**
          * 图像上下边距
+         */
+        private Integer margin;
+
+    }
+
+    /**
+     * PDF条码构造类
+     */
+    @Data
+    @AllArgsConstructor
+    @NoArgsConstructor
+    @Accessors(chain = true)
+    public static class PdfBarcode {
+
+        /**
+         * 条码类型
+         */
+        private BarcodeType barcodeType;
+
+        /**
+         * 条码缩放比例
+         */
+        private Integer scaleRate;
+
+        /**
+         * 条码高度
+         */
+        private Integer height;
+
+        /**
+         * 条码宽度
+         */
+        private Integer width;
+
+        /**
+         * 条码内容
+         */
+        private String content;
+
+        /**
+         * 条码文字
+         */
+        private String words;
+
+        /**
+         * 条码文字字体
+         */
+        private String fontFamily;
+
+        /**
+         * 条码文字字号
+         */
+        private Integer wordsSize;
+
+        /**
+         * 条码对齐方式
+         */
+        private BarcodeHorizontal barcodeHorizontal;
+
+        /**
+         * 条码上下边距
          */
         private Integer margin;
 
